--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "body-parser": "^1.14.2",
     "bootstrap": "^5.0.2",
+    "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "express-session": "^1.13.0",
     "node-fetch": "^2.6.1",
