--- a/package.json
+++ b/package.json
@@ -32,11 +32,13 @@
     "testEnvironment": "jsdom"
   },
   "dependencies": {
+    "@popperjs/core": "^2.9.3",
     "body-parser": "^1.14.2",
     "bootstrap": "^5.0.2",
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "express-session": "^1.13.0",
+    "jquery": "^3.6.0",
     "node-fetch": "^2.6.1",
     "pg": "^8.5.1",
     "react": "^17.0.2",
@@ -57,6 +59,7 @@
     "@babel/preset-env": "^7.14.7",
     "@babel/preset-react": "^7.14.5",
     "@babel/runtime": "^7.14.6",
+    "autoprefixer": "^10.3.2",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "chai": "^4.2.0",
@@ -66,12 +69,10 @@
     "css-loader": "^5.2.6",
     "dotenv": "^10.0.0",
     "enzyme": "^3.7.0",
-    "enzyme-adapter-react-16": "^1.6.0",
     "enzyme-to-json": "^3.3.4",
     "eslint": "^7.30.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-import-resolver-typescript": "^2.0.0",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jest": "^24.3.6",
     "eslint-plugin-jsx-a11y": "^6.4.1",
@@ -89,6 +90,7 @@
     "node-sass": "^6.0.1",
     "nodemon": "^2.0.7",
     "postcss-loader": "^6.1.1",
+    "precss": "^4.0.0",
     "prop-types": "^15.6.2",
     "puppeteer": "^1.9.0",
     "react-addons-test-utils": "^15.6.2",
