Now displaying images with hardcoded User
Signed-off-by: meekle <meekle@mac.com>

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "nodemon server/server.js",
     "build": "NODE_ENV=production webpack -w",
-    "dev": "concurrently \"NODE_ENV=development webpack serve --hot --open\" \"nodemon server/server.js\"",
+    "dev": "concurrently \"NODE_ENV=development webpack serve --hot\" \"nodemon server/server.js\"",
     "prod": "npm run build && npm start",
     "test": "jest --verbose"
   },
